[package]
name = "transfer"
version = "0.1.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[dependencies]
clap = "2"
#url = "1"
#regex = "0.2"
lazy_static = "0.2"
log = "0.3"
env_logger = "0.4"
#ron = "0.1"
error-chain = "0.11"

serde = "1"
serde_derive = "1"
serde_json = "1"

ring = "0.11"
rust-crypto = "0.2"
hex = "0.2"
chrono = "0.4"
uuid = { version = "0.5", features = ["v4", "use_std"] }

postgres = { version = "0.15", features = ["with-uuid", "with-chrono"] }
r2d2 = "0.7"
r2d2_postgres = "0.13"
migrant_lib = { version = "0.11", features = ["postgresql"] }

rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
