[package]
name = "transfer"
version = "0.6.5"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

[dependencies]
clap = "2"
log = "0.4"
env_logger = "0.6"
ron = "0.4"
lazy_static = "1"

serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.5"

ring = "0.13"
rust-crypto = "0.2"
hex = "0.3"
chrono = "0.4"
uuid = { version = "0.5", features = ["v4", "use_std"] }

postgres = { version = "0.15", features = ["with-uuid", "with-chrono"] }
r2d2 = "0.8"
r2d2_postgres = "0.14"
xdg = "2"
migrant_lib = { version = "0.21", features = ["d-postgres"] }

warp = "0.1.18"
hyper = "0.12"

futures = "0.1"
futures-cpupool = "0.1"
futures-fs = "0.0.5"
num_cpus = "1"
tokio = "0.1"
